--- a/src/components/Navigation/Sidedrawer/Sidedrawer.module.css
+++ b/src/components/Navigation/Sidedrawer/Sidedrawer.module.css
@@ -1,10 +1,10 @@
-.Sidedrawer{
+.Sidedrawer {
     position: fixed;
     width: 280px;
     max-width: 70%;
     height: 100%;
     left: 0;
-    top:0;
+    top: 0;
     z-index: 200;
     background-color: white;
     padding: 32px 16px;
@@ -12,20 +12,21 @@
     transition: transform 0.3s ease-out;
 }
 
-@media (min-width:500px){
-    .Sidedrawer{
+@media (min-width: 500px) {
+    .Sidedrawer {
         display: none;
     }
 }
 
-.Open{
+.Open {
     transform: translateX(0);
 }
 
-.Close{
+.Close {
     transform: translateX(-100%);
 }
 
-.Logo{
-    height:11%
-  }
+.Logo {
+    height: 11%;
+    margin-bottom: 32px;
+}
