--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #703b09;
+  background-color: #703B09;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -13,11 +13,16 @@
   z-index: 90;
 }
 
-.Toolbar nav{
-    height:100%;
-    
+.Toolbar nav {
+  height: 100%;
 }
 
-.Logo{
-  height:80%
+.Logo {
+  height: 80%;
+}
+
+@media (max-width: 499px) {
+  .DesktopOnly {
+      display: none;
+  }
 }
