--- a/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
+++ b/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
@@ -11,21 +11,18 @@
   padding: 5px;
   margin: 0 5px;
   width: 80px;
-  border: 1px solid #aa6817;
   cursor: pointer;
   outline: none;
 }
 
 .BuildControl button:disabled {
-  background-color: #ac9980;
-  border: 1px solid #7e7365;
-  color: #ccc;
   cursor: default;
+  box-shadow: none;
+  background-color: #ccc;
+  color:black;
 }
 
 .BuildControl button:hover:disabled {
-  background-color: #ac9980;
-  color: #ccc;
   cursor: not-allowed;
 }
 
@@ -55,4 +52,20 @@
 .BuildControl .More:active {
   background-color: #99703f;
   color: white;
+}
+
+.BuildControl button:not(:disabled) {
+  animation: enable 0.3s linear;
+}
+
+@keyframes enable {
+  0% {
+      transform: scale(1);
+  }
+  60% {
+      transform: scale(1.1);
+  }
+  100% {
+      transform: scale(1);
+  }
 }
