--- a/src/components/Burger/BuildControls/BuildControls.module.css
+++ b/src/components/Burger/BuildControls/BuildControls.module.css
@@ -1,6 +1,6 @@
 .BuildControls {
   widows: 100%;
-  background-color: #cf8f2e;
+  background-color: #2f2b32;
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -14,7 +14,7 @@
     background-color: #DAD735;
     outline: none;
     cursor: pointer;
-    border: 1px solid #966909;
+    /* border: 1px solid #966909; */
     color: #966909;
     font-family: inherit;
     font-size: 1.2em;
@@ -24,14 +24,14 @@
 
 .OrderButton:hover, .OrderButton:active {
     background-color: #A0DB41;
-    border: 1px solid #966909;
+    /* border: 1px solid #966909; */
     color: #966909;
 }
 
 .OrderButton:disabled {
     background-color: #C7C6C6;
     cursor: not-allowed;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     color: #888888;
 }
 
