--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -6,7 +6,7 @@
 }
 
 .NavigationItem a {
-  color: #8F5C2C;
+  color: white;
   text-decoration: none;
   width: 100%;
   box-sizing: border-box;
@@ -16,7 +16,7 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-  color: #40A4C8;
+  color: #a7bf2e;
 }
 
 @media (min-width: 500px) {
@@ -38,8 +38,8 @@
   .NavigationItem a:hover,
   .NavigationItem a:active,
   .NavigationItem a.active {
-      background-color: #8F5C2C;
-      border-bottom: 4px solid #40A4C8;
+      background-color: #39353d;
+      border-bottom: 4px solid #a7bf2e;
       color: white;
   }
 }
