--- a/src/index.css
+++ b/src/index.css
@@ -1046,6 +1046,19 @@ video {
   background-color: #702459;
 }
 
+.bg-greeny {
+  background-color: #a7bf2e;
+}
+
+.bg-reddy {
+  background-color: #f95a37;
+}
+
+.bg-darker {
+  background-color: #2f2b32;
+}
+
+
 .hover\:bg-transparent:hover {
   background-color: transparent;
 }
@@ -39308,4 +39321,24 @@ code {
   .xl\:z-auto {
     z-index: auto;
   }
+}
+
+html{
+  background-color: #faf8ed;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
