fixed tailwind preprocessing using postcss

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,14 +8,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
 html{
-  background-color: #faf8ed;
+  background-color: rgb(148, 148, 148);
 }
 
 ::-webkit-scrollbar {
