--- a/src/containers/Auth/Auth.module.css
+++ b/src/containers/Auth/Auth.module.css
@@ -6,6 +6,7 @@
     border:1px solid #eee;
     padding:10px;
     box-sizing: border-box;
+    background: rgb(245, 245, 245);
 }
 @media (min-width: 600px){
     .Auth{
